# study-notes

./: .gitignore
CMakeProjectFramework/: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
CMakeProjectFramework/cmake/: AddLibrary.cmake
CMakeProjectFramework/src/: CMakeLists.txt
CMakeProjectFramework/src/ExportAbstractClass/: AbstractClassInterface.cpp  AbstractClassInterface.h  ExportClass.cpp  ExportClass.h  IExportAbstractClass.h
CMakeProjectFramework/src/ExportC/: CInterface.cpp  CInterface.h
CMakeProjectFramework/src/ExportClass/: ClassInterface.cpp  ClassInterface.h
CMakeProjectFramework/src/ExportCplus/: CplusInterface.cpp  CplusInterface.h
CMakeProjectFramework/src/common/: ExportMarco.h
CMakeProjectFramework/test/: CMakeLists.txt  TestAbstractClass.cpp  TestC.cpp  TestClass.cpp  TestCplus.cpp
FmtLog/: .gitignore  CMakeLists.txt
FmtLog/cmake/: CMakeProjectFrameworkConfig.cmake  CMakeProjectFrameworkConfigVersion.cmake  CompileOptions.cmake
FmtLog/src/: CMakeLists.txt  FileSink.h  SPSCVarQueueOPT.h  TSCNS.h  fmtlog.cpp  fmtlog.h  fmtlogDetail.cpp  fmtlogDetail.h  logger.cpp  logger.h
FmtLog/test/: CMakeLists.txt
cplusplus/: .clang-format  CMakeLists.txt  pre-install.bat
cplusplus/cmake/: CompileOptions.cmake  DetectEnvironment.cmake
cplusplus/src/: CMakeLists.txt
cplusplus/src/__thread-and-thread_local/: CMakeLists.txt  README.md  __thread.cpp  thread_local.cpp
cplusplus/src/condition-variables-and-semaphore/: one-producer-and-one-consumer copy.cpp  one-producer-and-one-consumer.cpp
cplusplus/src/custom_str/: CMakeLists.txt  CustomStr.h  main.cpp
cplusplus/src/data-and-algorithm/: BinaryHeap copy.hpp  BinaryHeap.h  BinaryHeap.hpp  CMakeLists.txt  STLheap.cpp  heap-sort.cpp  heap-sort1.cpp  main.cpp
cplusplus/src/explicit/: CMakelists.txt  explicit.cpp
cplusplus/src/fmt_enc_dec/: CMakeLIsts.txt  fmt_enc_dec.cpp  fmt_enc_dec_complex.cpp  fmtutil.h
cplusplus/src/memory_align/: CMakeLists.txt  memory_align.cpp
cplusplus/src/move/: CMakelists.txt  move.cpp
cplusplus/src/placement_new/: CMakeLists.txt  placement_new.cpp
cplusplus/src/vector/: CMakelists.txt  vector.cpp
python/: copy_folder.py
python/excel/: read_xlsx_for_copy_file.py  read_xlsx_save_to_txt.py
